<resources>
    <string name="app_name">Math Game</string>
    <string name="javob">Javob</string>
    <string name="_428_500">428 + 500 = ?</string>
    <string name="btn_1">btn_1</string>
    <string name="btn_4">btn_4</string>
    <string name="btn_7">btn_7</string>
    <string name="btn_2">btn_2</string>
    <string name="btn_5">btn_5</string>
    <string name="btn_8">btn_8</string>
    <string name="btn_0">btn_0</string>
    <string name="btn_3">btn_3</string>
    <string name="btn_6">btn_6</string>
    <string name="btn_9">btn_9</string>
    <string name="btn_next">btn_next</string>
    <string name="btn_idea">btn_idea</string>
</resources>