<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2FAD64"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/top_background"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.41"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0">

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/my_font_1"
            android:textColor="#FCFCF7"
            android:textSize="@dimen/_35ssp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/linear_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.65"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1">

        <TextView
            android:id="@+id/tvAnswer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/tv_style"
            android:fontFamily="@font/my_font_1"
            android:gravity="center"
            android:hint="@string/answer"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp"
            android:textColor="#2C2C2C"
            android:textColorHint="#8BC38D"
            android:textSize="@dimen/_30ssp"
            app:layout_constraintBottom_toTopOf="@id/guideline_top"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.6"
            app:layout_constraintWidth_percent="0.82" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:baselineAligned="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline_top"
            app:layout_constraintVertical_weight="1">

            <LinearLayout
                android:id="@+id/linear_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/btn_1"
                    android:layout_width="@dimen/_55sdp"
                    android:layout_height="@dimen/_55sdp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/btn_1"
                    android:src="@drawable/number_1" />

                <ImageView
                    android:id="@+id/btn_4"
                    android:layout_width="@dimen/_55sdp"
                    android:layout_height="@dimen/_55sdp"
                    android:layout_marginVertical="10dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/btn_4"
                    android:src="@drawable/number_4" />

                <ImageView
                    android:id="@+id/btn_7"
                    android:layout_width="@dimen/_55sdp"
                    android:layout_height="@dimen/_55sdp"
                    android:layout_marginVertical="10dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/btn_7"
                    android:src="@drawable/number_7" />

                <ImageView
                    android:id="@+id/btn_backspace"
                    android:layout_width="@dimen/_55sdp"
                    android:layout_height="@dimen/_55sdp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/btn_idea"
                    android:src="@drawable/btn_backspace" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/btn_2"
                    android:layout_width="@dimen/_55sdp"
                    android:layout_height="@dimen/_55sdp"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/btn_2"
                    android:src="@drawable/number_2" />

                <ImageView
                    android:id="@+id/btn_5"
                    android:layout_width="@dimen/_55sdp"
                    android:layout_height="@dimen/_55sdp"
                    android:layout_marginVertical="10dp"
                    android:contentDescription="@string/btn_5"
                    android:src="@drawable/number_5" />

                <ImageView
                    android:id="@+id/btn_8"
                    android:layout_width="@dimen/_55sdp"
                    android:layout_height="@dimen/_55sdp"
                    android:layout_marginVertical="10dp"
                    android:contentDescription="@string/btn_8"
                    android:src="@drawable/number_8" />

                <ImageView
                    android:id="@+id/btn_0"
                    android:layout_width="@dimen/_55sdp"
                    android:layout_height="@dimen/_55sdp"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/btn_0"
                    android:src="@drawable/number_0" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/btn_3"
                    android:layout_width="@dimen/_55sdp"
                    android:layout_height="@dimen/_55sdp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/btn_3"
                    android:src="@drawable/number_3" />

                <ImageView
                    android:id="@+id/btn_6"
                    android:layout_width="@dimen/_55sdp"
                    android:layout_height="@dimen/_55sdp"
                    android:layout_marginVertical="10dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/btn_6"
                    android:src="@drawable/number_6" />

                <ImageView
                    android:id="@+id/btn_9"
                    android:layout_width="@dimen/_55sdp"
                    android:layout_height="@dimen/_55sdp"
                    android:layout_marginVertical="10dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/btn_9"
                    android:src="@drawable/number_9" />

                <ImageView
                    android:id="@+id/btn_next"
                    android:layout_width="@dimen/_55sdp"
                    android:layout_height="@dimen/_55sdp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/btn_next"
                    android:src="@drawable/ic_next" />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>